--- a/blocks/reviews/reviews__carousel/reviews__carousel.css
+++ b/blocks/reviews/reviews__carousel/reviews__carousel.css
@@ -4,6 +4,11 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  transition: transform 0.3s ease;
+  touch-action: pan-x;
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
 
 @media (max-width: 1900px) and (min-width: 769px) {
